--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   自炊生活をもっと楽しく、効率的に。PlateColorは食材管理から献立提案まで、
   あなたの自炊生活をトータルサポートします。
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://platecolor.jp"
 twitter_username: lis_poire
 github_username:  lis_poire
 
